Opening java.lang package in the java.base module to fix most mock-related test issues.